--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Nama Lengkap: SEPTI JULIANA</h1>
-<h2>Kelas: XII TKJ 1/2</h2>
+<h2>Kelas: XII TKJ 2</h2>
 <h3>Sekolah: SMK PANCA BHAKTI RAKIT</h3>
 </body>
 </html>
