--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <h1>Nama Lengkap: SEPTI JULIANA</h1>
 <h2>Kelas: XII TKJ 2</h2>
 <h3>Sekolah: SMK PANCA BHAKTI RAKIT</h3>
+<img src="assets/fotoku.jepg"alt="fotosayasSJ.jpeg"width="300">
 </body>
 </html>
