--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <h1>Nama Lengkap: SEPTI JULIANA</h1>
 <h2>Kelas: XII TKJ 2</h2>
 <h3>Sekolah: SMK PANCA BHAKTI RAKIT</h3>
-<img src="assets/fotoku.png"alt="fotosayasSJ.jpeg"width="300">
+<img src= "assets/fotosayasSJ.jpeg"alt="foto saya"width="300">
 </body>
 </html>
