--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h2>Kelas: XII TKJ 2</h2>
 <h3>Sekolah: SMK PANCA BHAKTI RAKIT</h3>
 <img src= "assets/fotosayasSJ.jpeg"alt="foto saya"width="300">
+<img src= "assets/fotosayasSJ.jpeg"alt="foto saya"width="300">
 </body>
 </html>
