--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <h2>Kelas: XII TKJ 2</h2>
 <h3>Sekolah: SMK PANCA BHAKTI RAKIT</h3>
 <img src= "assets/fotosayasSJ.jpeg"alt="foto saya"width="300">
-<img src= "assets/logo (1).webp"alt="logo sekolah"width="300">
+  <div class="gambar">
+<img src="assets/logo (1).webp"
+alt="logo sekolah" width="300"
+class="logo">
 </body>
 </html>
